objects/Oracle_Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Expenses__c</fullName>
        <inlineHelpText>Number of Oracle Expenses attached to this Task.</inlineHelpText>
        <label># of Expenses</label>
        <summaryForeignKey>Oracle_Task_Expenses__c.Oracle_Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Number__c</fullName>
        <formula>Oracle_Project__r.Project_Number__c</formula>
        <label>Oracle Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project__c</fullName>
        <label>Oracle Project</label>
        <referenceTo>Oracle_Project__c</referenceTo>
        <relationshipLabel>Oracle Project Tasks</relationshipLabel>
        <relationshipName>Oracle_Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Id__c</fullName>
        <label>Parent Task Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Number__c</fullName>
        <label>Parent Task Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Expense_Reports__c</fullName>
        <label>Sum of Expense Reports</label>
        <summarizedField>Oracle_Task_Expenses__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Oracle_Task_Expenses__c.Name</field>
            <operation>equals</operation>
            <value>Expense Reports</value>
        </summaryFilterItems>
        <summaryForeignKey>Oracle_Task_Expenses__c.Oracle_Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Supplier_Invoices__c</fullName>
        <label>Sum of Supplier Invoices</label>
        <summarizedField>Oracle_Task_Expenses__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Oracle_Task_Expenses__c.Name</field>
            <operation>equals</operation>
            <value>Supplier Invoices</value>
        </summaryFilterItems>
        <summaryForeignKey>Oracle_Task_Expenses__c.Oracle_Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Task_End_Date__c</fullName>
        <label>Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <externalId>true</externalId>
        <label>Task Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Start_Date__c</fullName>
        <label>Task Start Date</label>
        <type>Date</type>
    </fields>
    <label>Oracle Project Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>